[gd_scene load_steps=4 format=3 uid="uid://dmdiqmkbpy6cm"]

[ext_resource type="PackedScene" uid="uid://7l65j1ha5ckl" path="res://Levels/DungeonTileMap.tscn" id="1_jv7tt"]
[ext_resource type="Script" path="res://Levels/Level3/troll_platform.gd" id="1_khyfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3gw8"]
size = Vector2(64, 20)

[node name="TrollPlatform" type="CharacterBody2D"]
script = ExtResource("1_khyfy")

[node name="TileMap" parent="." instance=ExtResource("1_jv7tt")]
layer_0/tile_data = PackedInt32Array(0, 196608, 3, 1, 196608, 2, 65535, 196608, 2, 65534, 196608, 3)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_k3gw8")

[node name="move_dir" type="Marker2D" parent="."]
position = Vector2(0, -23)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 5)
scale = Vector2(1, 0.5)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
